--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ layout: default
 
 <h1>Welcome to The Modern Multilingual </h1>
   
- <b><a href="https://themodernmultilingual.github.io/privacypolicy.html">Privacy Policy</a></b><br>
+ <b><a href="  https://taniay21.github.io/themodernmultilingual/privacypolicy.html">Privacy Policy</a></b><br>
   
- <b><a href="https://themodernmultilingual.github.io/terms.html">Terms & Conditions </a></b><br>
+ <b><a href="https://taniay21.github.io/themodernmultilingual/terms.html">Terms & Conditions </a></b><br>
    
- <b><a href="https://themodernmultilingual.github.io/support.html">Support</a></b>
+ <b><a href="https://taniay21.github.io/themodernmultilingual/support.html">Support</a></b>
 
 </body>
