--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <body>
 
-<h1>Welcome to The Modern Multilingual </h1>
+<h1> 天天向上: Chinese Word of the Da‪y‬</h1>
   
  <b><a href="https://taniay21.github.io/themodernmultilingual/privacypolicy.html">Privacy Policy</a></b><br>
   
