--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ layout: default
    
  <b><a href="https://taniay21.github.io/themodernmultilingual/support.html">Support</a></b>
  
- <b><a href="https://apps.apple.com/us/app/%E5%A4%A9%E5%A4%A9%E5%90%91%E4%B8%8A-hsk-5-chinese-wotd/id1547074310#?platform=iphone">>Download on the App Store</a></b>
-
+ <b><a href=" https://apps.apple.com/us/app/%E5%A4%A9%E5%A4%A9%E5%90%91%E4%B8%8A-hsk-5-chinese-wotd/id1547074310#?platform=iphone">Download on the App Store</a></b>
 
 </body>
